--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 Firmware/FireBLE_Passthrough/SI.*
 Firmware/FireBLE_Passthrough/prj_firefly_passthrough/keil/firefly_passthrough.*
+Firmware/FireBLE_Passthrough/prj_firefly_passthrough/keil/firefly_passthrough.uvgui.*
 Firmware/FireBLE_Passthrough/prj_firefly_passthrough/keil/Listings/*
 Firmware/FireBLE_Passthrough/prj_firefly_passthrough/keil/obj/*
